--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1292,7 +1292,8 @@
         z-index: 101;
     }
     .coll_mainnav.coll_mainnav_active ul.coll_mainnav_menu {
-        background: transparent;
+        background-image: radial-gradient(circle at center, #023047, #04495b, #ff9800);
+        background-size: cover;
         width: 100%;
         height: auto;
         display: flex;
