--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -249,15 +249,12 @@ h1 {
 }
 
 h1,
-p {
-    color: antiquewhite;
-}
-
 h2 {
-    color: #8acae6;
+    color: #0D0D0D;
 }
 
-a {
+a,
+p {
     color: #ffff;
 }
 
@@ -857,77 +854,9 @@ ul.icons li {
     }
 }
 
-.table-wrapper {
-    overflow-x: scroll;
-    /* Standard property */
-}
-
-table {
-    margin: 0 0 2em 0;
-    width: 100%;
-}
-
-table tbody tr {
-    border: solid 1px #c9c9c9;
-    border-left: 0;
-    border-right: 0;
-}
-
-table tbody tr:nth-child(2n+1) {
-    background-color: rgba(144, 144, 144, 0.075);
-}
-
-table td {
-    padding: 0.75em 0.75em;
-}
-
-table th {
-    font-size: 0.9em;
-    font-weight: 900;
-    padding: 0 0.75em 0.75em 0.75em;
-    text-align: left;
-}
-
-table thead {
-    border-bottom: solid 2px #c9c9c9;
-}
-
-table tfoot {
-    border-top: solid 2px #c9c9c9;
-}
-
-table.alt {
-    border-collapse: separate;
-}
-
-table.alt tbody tr td {
-    border: solid 1px #c9c9c9;
-    border-left-width: 0;
-    border-top-width: 0;
-}
-
-table.alt tbody tr td:first-child {
-    border-left-width: 1px;
-}
-
-table.alt tbody tr:first-child td {
-    border-top-width: 1px;
-}
-
-table.alt thead {
-    border-bottom: 0;
-}
-
-table.alt tfoot {
-    border-top: 0;
-}
-
 
 /* Button */
 
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
 button,
 .button {
     -moz-appearance: none;
@@ -941,8 +870,8 @@ button,
     background-color: transparent;
     border-radius: 4px;
     border: 0;
-    box-shadow: inset 0 0 0 2px #010b70;
-    color: #010b70 !important;
+    box-shadow: inset 0 0 0 2px #FAED26;
+    color: #FAA305 !important;
     cursor: pointer;
     display: inline-block;
     font-size: 0.8em;
@@ -957,95 +886,6 @@ button,
     text-overflow: ellipsis;
     text-transform: uppercase;
     white-space: nowrap;
-}
-
-input[type="submit"].icon:before,
-input[type="reset"].icon:before,
-input[type="button"].icon:before,
-button.icon:before,
-.button.icon:before {
-    margin-right: 0.5em;
-}
-
-input[type="submit"].fit,
-input[type="reset"].fit,
-input[type="button"].fit,
-button.fit,
-.button.fit {
-    width: 100%;
-}
-
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover,
-button:hover,
-.button:hover {
-    color: #ffffff !important;
-    box-shadow: inset 0 0 0 2px#ffffff;
-}
-
-input[type="submit"]:active,
-input[type="reset"]:active,
-input[type="button"]:active,
-button:active,
-.button:active {
-    background-color: rgba(5, 24, 118, 0.418);
-}
-
-input[type="submit"].small,
-input[type="reset"].small,
-input[type="button"].small,
-button.small,
-.button.small {
-    font-size: 0.6em;
-}
-
-input[type="submit"].large,
-input[type="reset"].large,
-input[type="button"].large,
-button.large,
-.button.large {
-    font-size: 1em;
-}
-
-input[type="submit"].primary,
-input[type="reset"].primary,
-input[type="button"].primary,
-button.primary,
-.button.primary {
-    box-shadow: none;
-    background-color: #585858;
-    color: #ffffff !important;
-}
-
-input[type="submit"].primary:hover,
-input[type="reset"].primary:hover,
-input[type="button"].primary:hover,
-button.primary:hover,
-.button.primary:hover {
-    background-color: #010b70;
-}
-
-input[type="submit"].primary:active,
-input[type="reset"].primary:active,
-input[type="button"].primary:active,
-button.primary:active,
-.button.primary:active {
-    background-color: #010b70;
-}
-
-input[type="submit"].disabled,
-input[type="submit"]:disabled,
-input[type="reset"].disabled,
-input[type="reset"]:disabled,
-input[type="button"].disabled,
-input[type="button"]:disabled,
-button.disabled,
-button:disabled,
-.button.disabled,
-.button:disabled {
-    pointer-events: none;
-    opacity: 0.25;
 }
 
 
@@ -1293,7 +1133,8 @@ body.is-touch .tiles article .content {
 /* Header */
 
 #header {
-    padding: 4em 0 0.1em 0;
+    padding: 30px 0;
+    background-color: #46344E;
 }
 
 #header .logo {
@@ -1343,7 +1184,7 @@ body.is-touch .tiles article .content {
     width: 5rem;
     height: 20vh;
     padding: 1rem;
-    border-left: 8px solid #219ebc;
+    border-left: 8px solid #5A5560;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1356,7 +1197,7 @@ body.is-touch .tiles article .content {
 
 .coll_mainnav:hover {
     width: 10rem;
-    border-right: 3px solid #6f3fc7;
+    border-right: 6px solid#FAED26;
     cursor: pointer;
 }
 
@@ -1394,9 +1235,9 @@ body.is-touch .tiles article .content {
 }
 
 .coll_mainnav ul li:hover {
-    background: linear-gradient(45deg, #080aac, #a47a32);
+    background: linear-gradient(45deg, #FAED26, #FAA305);
     width: 100%;
-    color: #050206;
+    color: #000;
     box-shadow: 0px 0px 8px rgba(100, 100, 100, .65);
 }
 
@@ -1409,7 +1250,7 @@ body.is-touch .tiles article .content {
 .coll_mainnav ul li a .coll_mainnav_link_text,
 .coll_mainnav ul li a i {
     padding: .5rem;
-    color: #fff;
+    color: #000;
     transform-origin: right;
 }
 
@@ -1452,7 +1293,7 @@ body.is-touch .tiles article .content {
 #main>.innerm>.image.main img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 40rem;
     filter: blur(4px);
 }
 
@@ -1476,7 +1317,7 @@ body.is-touch .tiles article .content {
 }
 
 #main>.innerm>.gallery h2 {
-    color: #000;
+    color: #222629;
     font-size: 34px;
     font-style: italic;
     margin: 0;
@@ -1535,89 +1376,74 @@ body.is-menu-visible #menu .close {
 
 #footer {
     padding: 5em 0 6em 0;
-    background-color: #023047;
+    background-color: #5A5560;
 }
 
 #footer .promos {
-    width: 800px;
+    width: 50%;
     margin: 0 auto;
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
+    gap: 20px;
 }
 
-#footer .promo,
-#footer .promo_scale {
-    width: 250px;
-    background: #0F1012;
-    color: #f9f9f9;
+#footer .promos .promo {
+    width: 350px;
+    background: #474B4F;
+    color: #FAED26;
 }
 
-#footer .promo .deal,
-#footer .promo_scale .deal {
+#footer .promos .promo .deal {
     padding: 10px 0 0 0;
     text-align: center;
 }
 
-#footer .promo .deal span,
-#footer .promo_scale .deal span {
+#footer .promos .promo .deal span {
     display: block;
 }
 
-#footer .promo .deal span:first-of-type,
-#footer .promo_scale .deal span:first-of-type {
+#footer .promos .promo .deal span:first-of-type {
     font-size: 23px;
-    color: #fb8500;
+    color: #FAED26;
 }
 
-#footer .promo .deal span:last-of-type,
-#footer .promo_scale .deal span:last-of-type {
+#footer .promos .promo .deal span:last-of-type {
     font-size: 13px;
 }
 
-#footer .promo .price,
-#footer .promo_scale .price {
-    width: 250px;
+#footer .promos .promo .price {
+    width: inherit;
     background: #292b2e;
+    color: #FAED26;
     margin: 15px 0 10px 0;
     text-align: center;
     font-size: 23px;
     padding: 17px 0;
 }
 
-#footer .promo ul,
-#footer .promo_scale ul {
+#footer .promos .promo ol {
     margin: 20px 0 10px 0;
     padding: 0;
     list-style-type: none;
     text-align: center;
-    color: #999999;
+    color: #fff;
 }
 
-#footer .promo ul li,
-#footer .promo_scale ul li {
+#footer .promos .promo ol li {
     margin: 10px 0 0 0;
 }
 
-.promo_scale {
-    transform: scale(1.2);
-    box-shadow: 0 0 4px 1px rgba(20, 20, 20, 0.8);
-}
-
-.promo_scale button {
-    background: #64AAA4;
-}
-
-.promo .price,
-.promo_scale .price {
-    color: #ffb703;
+#footer .promos .promo .btn {
+    display: grid;
+    text-align: center;
 }
 
 
 /* Wrapper */
 
 #wrapper {
-    background-color: #023047;
+    background-color: #5A5560;
 }
 
 #wrapper>*>.inner {
@@ -1637,9 +1463,9 @@ body.is-menu-visible #menu .close {
 /* levels css */
 
 .iwrapper {
-    width: 95%;
-    max-width: 1200px;
-    margin: 30px auto;
+    background-color: #46344E;
+    width: 100%;
+    margin: 20px auto;
 }
 
 .pricing-table h2 {
@@ -1669,7 +1495,7 @@ body.is-menu-visible #menu .close {
 }
 
 .price {
-    background: #04495b;
+    background: transparent;
     color: #ffb703;
     font-size: 2em;
     font-weight: 600;
@@ -1682,19 +1508,15 @@ body.is-menu-visible #menu .close {
     background: #216f99;
 }
 
-.pricing-box:nth-child(3) .price {
-    background: #219ebc;
-}
-
 .pricing-box:hover .price {
-    background: #ffb703;
+    background: #292b2e;
     box-shadow: inset 0 0 100px 0 rgba(0, 0, 0, 0.3);
     color: #219ebc;
 }
 
 .btn {
-    background: #ffb703;
-    border: 1px solid #ffb703;
+    background: #9D8D8F;
+    border: 1px solid #0D0D0D;
     color: #000;
     -webkit-transition: all ease-out 0.2s;
     transition: all ease-out 0.2s;
@@ -1705,9 +1527,9 @@ body.is-menu-visible #menu .close {
 }
 
 .btn:hover {
-    background: #023047;
-    border: 1px solid #023047;
-    color: #fff !important;
+    background: #0D0D0D;
+    border: 1px solid #6B6B6B;
+    color: #ffb703 !important;
 }
 
 .pricing-table-divider {
@@ -1775,4 +1597,19 @@ body.is-menu-visible #menu .close {
         align-self: start;
         /* For modern browsers */
     }
+}
+
+
+/* Add a full-width line */
+
+.Line {
+    width: 100%;
+    height: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.Line.pricing-table-divider {
+    height: 3px;
+    width: 100%;
 }
