--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1208,22 +1208,17 @@
         align-items: center;
         width: 100%;
     }
-    #footer .promos .promo,
-    #footer .promos .promo_scale {
-        width: 80%;
+    #footer .promos .promo {
+        width: 100%;
         max-width: 400px;
         margin: 0 0 30px 0;
     }
-    #footer .promo .price,
-    #footer .promo_scale .price {
-        width: auto;
+    #footer .promos .promo .price {
+        width: inherit;
         background: #292b2e;
         margin: 15px 0 10px 0;
         text-align: center;
         font-size: 23px;
-    }
-    .promo_scale {
-        transform: none;
     }
 }
 
